--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <application
         android:label="coffee_app"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <service android:name=".service.NativeService" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
